--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "undefine",
-  "version": "0.2.12",
+  "version": "0.2.13",
   "description": "Universal Module Loader, for node.js, browser scripts, bundles, and AMD define loaders",
   "main": "undefine.js",
   "engines": {
@@ -14,12 +14,12 @@
   },
   "devDependencies": {
     "curl-amd": "0.8.x",
-    "requirejs": "2.x",
-    "uglify-js": "2.x"
+    "requirejs": "^2.3.6",
+    "uglify-js": "3.x"
   },
   "scripts": {
     "test": "node test/for_node",
-    "build": "cd dist && sh ../node_modules/.bin/uglifyjs --compress --mangle --output undefine-min.js --source-map undefine-min.map -- ../undefine.js",
+    "build": "cd dist && sh ../node_modules/.bin/uglifyjs --compress --mangle --output undefine-min.js --source-map 'url=undefine-min.js.map' -- ../undefine.js",
     "stats": "cd dist && cat undefine-min.js | gzip > undefine-min.js.gz && cat ../undefine.js | gzip > undefine.js.gz && cat undefine-min.map | gzip > undefine-min.map.gz && wc ../undefine.js * | grep -v total && rm *.gz",
     "postinstall": "node node_modules\\allow-require-me\\allow-require-me.js add"
   },
